[package]
name = "bme280_vizualizer"
version = "0.1.0"
authors = ["Piotr Makowiecki"]
edition = "2018"

[dependencies]
serialport = "4.0.1"
regex = "1"
lazy_static = "1"

plotters-backend = "0.3.0"
piston_window = "0.120.0"
plotters = {version = "0.3.0", default_features = false, features = ["ttf", "all_series"]}